# tac

./: CONTRIBUTORS.md  Cargo.toml  Makefile  README.md
.cargo/: config
.github/workflows/: rust.yml
src/: main.rs  tac.rs
