[package]
name = "tac"
edition = "2018"
version = "2.1.0"
authors = ["Mahmoud Al-Qudsi <mqudsi@neosmart.net>"]
description = "Print lines from file in reverse order"
homepage = "https://github.com/neosmart/tac"
repository = "https://github.com/neosmart/tac"
readme = "README.md"
keywords = ["tac", "reverse", "core", "utils"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
atty = "0.2"
memmap = "0.7"

[features]
nightly = []
